# python-flickr-api

./: .gitignore  INSTALL.txt  LICENSE.txt  Makefile  Pipfile  README  README.md  pyproject.toml  release.sh  setup.py
flickr_api/: __init__.py  _version.py  api.py  auth.py  cache.py  flickrerrors.py  keys.py  method_call.py  methods.py  methods.py.tmpl  multipart.py  objects.py  reflection.py  tools.py  upload.py  utils.py
samples/: download_album.py  shell.py  show_albums.py
test/: test_500_handler.py  test_bytes_response.py  test_parse_sizes.py  test_upload.py
