[tool.poetry]
name = "flickr-api"
version = "0.7.7"
description = "Python wrapper for the Flickr API"
authors = ["Alexis Mignon <alexis.mignon@gmail.com>"]
license = "BSD License"
readme = "README.md"
packages = [{include = "flickr_api"}]
repository = "https://github.com/alexis-mignon/python-flickr-api"


[tool.poetry.dependencies]
python = "^2.7 || ^3.5"
oauth2 = "^1.9.0.post1"
six = "==1.12.0"
requests = "==2.21.0"
importlib-metadata = { version = "~1.5.0", python = "<3.8" }

[tool.poetry.group.dev.dependencies]
pytest = "==4.6.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
